--- a/login-nextjs/package.json
+++ b/login-nextjs/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
